--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ramda": "^0.27.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^3.11.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "typestyle": "^2.1.0"
