--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "script": "ts-node --files --project ./scripts/tsconfig.json"
   },
   "dependencies": {
+    "@researchgate/react-intersection-observer": "^1.3.5",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/node-fetch": "^2.5.7",
     "@types/ramda": "^0.27.32",
