--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "script": "ts-node --files --project ./scripts/tsconfig.json"
   },
   "dependencies": {
-    "@researchgate/react-intersection-observer": "^1.3.5",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/node-fetch": "^2.5.7",
     "@types/ramda": "^0.27.32",
@@ -28,6 +27,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^3.11.0",
+    "react-use-scroll-position": "^2.0.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "typestyle": "^2.1.0"
