--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "checkLinks": "yarn blc http://localhost:3000 -ro"
   },
   "dependencies": {
+    "@artsy/fresnel": "^1.3.0",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/node-fetch": "^2.5.7",
     "@types/ramda": "^0.27.32",
@@ -33,6 +34,7 @@
     "react-markdown": "^5.0.3",
     "react-use-scroll-position": "^2.0.0",
     "remark": "^13.0.0",
+    "remark-gfm": "^1.0.0",
     "remark-html": "^13.0.1",
     "typestyle": "^2.1.0"
   },
