--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/node-fetch": "^2.5.7",
     "@types/ramda": "^0.27.32",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "@types/rss": "^0.0.28",
     "algoliasearch": "^4.8.0",
     "csstips": "^1.2.0",
@@ -27,13 +28,14 @@
     "image-size": "^0.9.3",
     "io-ts": "^2.2.12",
     "isomorphic-fetch": "^3.0.0",
-    "next": "10.0.1",
+    "next": "^10.0.3",
     "node-fetch": "^2.6.1",
     "ramda": "^0.27.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^3.11.0",
     "react-markdown": "^5.0.3",
+    "react-syntax-highlighter": "^15.4.3",
     "react-use-scroll-position": "^2.0.0",
     "remark": "^13.0.0",
     "remark-gfm": "^1.0.0",
