--- a/package.json
+++ b/package.json
@@ -47,10 +47,15 @@
   "devDependencies": {
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
+    "@types/showdown": "^1.9.4",
     "broken-link-checker": "^0.7.8",
+    "dotenv": "^10.0.0",
     "husky": "^4.3.0",
+    "openai-api": "^1.2.3",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
+    "puppeteer": "^10.2.0",
+    "showdown": "^1.9.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
