--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/ramda": "^0.29.1",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/rss": "^0.0.30",
+    "@vercel/analytics": "^1.3.1",
     "algoliasearch": "^4.17.0",
     "csstips": "^1.2.0",
     "csx": "^10.0.1",
