--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "isomorphic-fetch": "^3.0.0",
     "next": "^13.3.4",
     "node-fetch": "^3.3.1",
+    "posthog-js": "^1.138.0",
     "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
