--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "populateAlgolia": "yarn script ./scripts/populateAlgolia.ts",
     "checkLinks": "yarn blc http://localhost:3000 -ro --exclude https://www.linkedin.com/in/mikecann",
     "compress:all:lossless": "optimizt --lossless ./public",
-    "compress:one:lossless": "optimizt --lossless ./public/posts/battletabs-enters-soft-launch"
+    "compress:one:lossless": "optimizt --lossless ./public/posts/battletabs-enters-soft-launch",
+    "compress:one:webp": "optimizt --webp ./public/posts/whisper-farm-parallel-transcription"
   },
   "dependencies": {
     "@artsy/fresnel": "^6.1.0",
