--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/rss": "^0.0.30",
     "@vercel/analytics": "^1.3.1",
     "algoliasearch": "^4.17.0",
+    "convex": "^1.13.2",
     "csstips": "^1.2.0",
     "csx": "^10.0.1",
     "date-fns": "^2.30.0",
@@ -43,7 +44,7 @@
     "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^5.2.1",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "react-use-scroll-position": "^2.0.0",
