--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/rss": "^0.0.30",
     "@vercel/analytics": "^1.3.1",
     "algoliasearch": "^4.17.0",
-    "convex": "^1.13.2",
+    "convex": "^1.16.5",
     "csstips": "^1.2.0",
     "csx": "^10.0.1",
     "date-fns": "^2.30.0",
@@ -40,6 +40,7 @@
     "isomorphic-fetch": "^3.0.0",
     "next": "^13.3.4",
     "node-fetch": "^3.3.1",
+    "openai": "^4.67.3",
     "posthog-js": "^1.138.0",
     "ramda": "^0.29.0",
     "react": "18.2.0",
@@ -63,7 +64,6 @@
     "broken-link-checker": "^0.7.8",
     "dotenv": "^16.0.3",
     "husky": "^8.0.3",
-    "openai-api": "^1.3.1",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "puppeteer": "^19.11.1",
