--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "image-size": "^1.0.2",
     "io-ts": "^2.2.20",
     "isomorphic-fetch": "^3.0.0",
+    "ldrs": "^1.0.2",
     "next": "^13.3.4",
     "node-fetch": "^3.3.1",
     "openai": "^4.67.3",
