just about ready to go

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dev": "concurrently --names \"next,convex\" --prefix-colors \"cyan,magenta\" \"yarn dev:next\" \"yarn dev:convex\"",
     "dev:next": "next dev",
     "dev:convex": "convex dev",
-    "build": "yarn populateAlgolia && yarn generateRSS && next build",
+    "build": "yarn populateAlgolia && yarn generateRSS && yarn uploadsPostsToOpenAIStorage && next build && yarn convex deploy",
     "start": "next start",
     "dev:ts": "tsc --noEmit -w",
     "generateRSS": "yarn script ./scripts/generateRSS.ts",
+    "uploadsPostsToOpenAIStorage": "yarn script ./scripts/openai/uploadPostsToStorage.ts",
     "script": "ts-node --files --project ./scripts/tsconfig.json",
     "populateAlgolia": "yarn script ./scripts/populateAlgolia.ts",
     "checkLinks": "yarn blc http://localhost:3000 -ro --exclude https://www.linkedin.com/in/mikecann",
@@ -58,6 +59,7 @@
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2",
+    "resend": "^4.0.0",
     "rss": "^1.2.2",
     "typestyle": "^2.4.0"
   },
