deploy for production

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "concurrently --names \"next,convex\" --prefix-colors \"cyan,magenta\" \"yarn dev:next\" \"yarn dev:convex\"",
     "dev:next": "next dev",
     "dev:convex": "convex dev",
-    "build": "yarn populateAlgolia && yarn generateRSS && yarn uploadsPostsToOpenAIStorage && yarn convex deploy && next build",
+    "build": "yarn populateAlgolia && yarn generateRSS && yarn uploadsPostsToOpenAIStorage && yarn cross-env NODE_ENV=production yarn convex deploy && next build",
     "start": "next start",
     "dev:ts": "tsc --noEmit -w",
     "generateRSS": "yarn script ./scripts/generateRSS.ts",
@@ -33,6 +33,7 @@
     "algoliasearch": "^4.17.0",
     "convex": "^1.16.5",
     "convex-helpers": "^0.1.60",
+    "cross-env": "^7.0.3",
     "csstips": "^1.2.0",
     "csx": "^10.0.1",
     "date-fns": "^2.30.0",
