--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
   "redirects": [
-    { "source": "/(.*)", "destination": "https://mikecann.blog/$1", "permanent": true }
+    {
+      "source": "/(.*)",
+      "destination": "https://mikecann.blog/$1",
+      "permanent": true,
+      "has": [
+        {
+          "type": "host",
+          "value": "mikecann.co.uk"
+        }
+      ]
+    }
   ]
 }
